--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ttt</name>
+	<name>stm32f407-z80emu</name>
 	<comment></comment>
 	<projects>
 	</projects>
