--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//Main/Display/font8x8.cpp=UTF-8
+encoding//Main/SDCard.cpp=UTF-8
+encoding//Main/emulator.cpp=UTF-8
 encoding//Main/startup.cpp=UTF-8
